<!DOCTYPE html> <html lang="en">
<head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Rejestracja</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    <link rel="stylesheet" href="styles.css">
</head>

<body>
    <h1 id="register-title">Rejestracja</h1>
    <section id="basic-info">
        <form>
            <div class="mb-3">
                <label for="firstNameInput" class="form-label">Imię</label>
                <input type="text" class="form-control" id="firstNameInput" placeholder="Wpisz imię">
            </div>
            <div class="mb-3">
                <label for="lastNameInput" class="form-label">Nazwisko</label>
                <input type="text" class="form-control" id="lastNameInput" placeholder="Wpisz nazwisko">
            </div>
        </form>
        <form class="gender-info">
            <div class="row justify-content-start">
                <div class="col-4">
                    <p>Płeć</p>
                </div>
                <div class="col-4">
                    <div class="gender-check">
                        <input class="gender-check-input" type="radio" name="flexRadioDefault" id="female" checked>
                        <label class="gender-check-label" for="female">
                      Kobieta
                    </label>
                    </div>
                    <div class="gender-check">
                        <input class="gender-check-input" type="radio" name="flexRadioDefault" id="male">
                        <label class="gender-check-label" for="male">
                      Mężczyzna
                    </label>
                    </div>
                </div>
            </div>
        </form>
    </section>
    <

--- a/registerform.html
+++ b/registerform.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1 id="registerTitle">Rejestracja</h1>
+    <h1 id="register-title">Rejestracja</h1>
     <section id="basic-info">
         <form>
             <div class="mb-3">
@@ -30,13 +30,13 @@
                 </div>
                 <div class="col-4">
                     <div class="gender-check">
-                        <input class="gender-check-input" type="radio" id="female" checked>
+                        <input class="gender-check-input" type="radio" name="flexRadioDefault" id="female" checked>
                         <label class="gender-check-label" for="female">
                       Kobieta
                     </label>
                     </div>
                     <div class="gender-check">
-                        <input class="gender-check-input" type="radio" id="male">
+                        <input class="gender-check-input" type="radio" name="flexRadioDefault" id="male">
                         <label class="gender-check-label" for="male">
                       Mężczyzna
                     </label>
@@ -108,7 +108,6 @@
         <div>
             <br>
             <button type="registerButton" class="btn btn-primary btn-block">Rejestruj</button>
-            </br>
         </div>
         </form>
     </section>
