--- a/registerform.html
+++ b/registerform.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-4">
                     <div class="gender-check">
-                        <input class="gender-check-input" type="radio" name="flexRadioDefault" id="female" checked>
+                        <input class="gender-check-input" type="radio" name="flexRadioDefault" id="female">
                         <label class="gender-check-label" for="female">
                       Kobieta
                     </label>
